2011-10-14 Tim Marston <edam@waxworlds.org>

	* gtypist.c, cursmenu.c, script.h: minor fixes to get gtypist to
	  build under MinGW
	* gtypist.c: removed call to MessageBeep() on windows, since it just
	  corrupts the stack! Currently we don't beep on error on windows, as
	  sending ASCII_BELL to the terminal just pauses and does no "bell".

2011-08-07 Felix Natter <fnatter@gmx.net>

	* utf8.c: new wchar_t* widen(char*) helper function
	* gtypist.c: widen the YN and RNE strings, but their usage isn't yet
	  fixed

2011-07-08 Felix Natter <fnatter@gmx.net>

	* utf8.c, utf8.h: use proper #define before #include for cchar_t
	  (needed for wide character output)

2011-02-28  Tim Marston <edam@waxworlds.org>

	* gtypist.c: rewrote the code to open a script file and check for the
	  presence of HOME environment variable (required for the bestlog) so
	  that it should work on Windows platforms when HOME is not present.

2011-02-26  Tim Marston <edam@waxworlds.org>

	* gtypist.c: added best-score tracking feature and re-wrote some of the
	  speed calculation/display code to always work with CPM (which are
	  saved in the bestlog) and convert to WPM only at display-time.

2011-01-03  Tim Marston <edam@waxworlds.org>

	* gtypist.c: fixed a bug where pressing escape during wait_user()
	  caused seek_label() to be called, but get_script_line() was never re-
	  called. This meant that the previously buffered next script line
	  (from before the seek) would still get executed. wait_user() now
	  treats escape as a "continue" character for all but tutorial prompts,
	  which now handle the seek properly by calling get_script_line().

2009-02-19  Paul Goins  <general@vultaire.net>

	* gtypist.c: Re-fixed the rounding bug by adding a function which
	  compares floats using sprintf-based rounding.  (Bug re-reported by
	  Jakub Gedeon.)

2009-02-04  Paul Goins  <general@vultaire.net>

	* gtypist.c: (display_speed): Fixed long-standing bug where gtypist