@@ -27,8 +27,113 @@
 #endif
 
 #include <stdlib.h>
+#include <iconv.h>
+#include <errno.h>
 #include "gettext.h"
 #define _(String) gettext (String)
+
+extern char* locale_encoding;
+extern int isUTF8Locale;
+
+wchar_t* widen(const char* text)
+{
+  int numChars = utf8len(text);
+  wchar_t* wideText = malloc((numChars+1) * sizeof(wchar_t));
+  int convresult = mbstowcs(wideText, text, numChars+1);
+  if (convresult != numChars)
+  {
+      fatal_error(_("couldn't convert UTF-8 to wide characters"), "?");
+  }
+
+  return wideText;
+}
+
+char* convertUTF8ToCurrentEncoding(const char* UTF8Input)
+{
+    iconv_t cd = iconv_open(locale_encoding, "UTF-8");
+    if (cd == (iconv_t) -1)
+    {
+        endwin();
+        printf("Error in iconv_open()\n");
+    }
+    size_t inleft = strlen(UTF8Input);
+    char* inptr = (char*)UTF8Input;
+    size_t outleft = inleft;
+    char* outptr = (char*)malloc(outleft + 1);
+    char* outptr_orig = outptr;
+    size_t nconv = iconv(cd, &inptr, &inleft, &outptr, &outleft);
+
+    /*
+    endwin();
+    printf("inleft=%d, outleft=%d, nconv=%d\n", inleft, outleft, nconv);
+    */
+    /* TODO: catch EILSEQ?? => no, all errors should lead to termination of gtypist! */
+
+    if (nconv == (size_t) -1)
+    {
+        int err = errno;
+        char buffer[2048];
+        sprintf(buffer, "iconv() failed on '%s': %s\n"
+                "You should probably use a UTF-8 locale for the selected lesson!\n",
+                UTF8Input,
+                strerror(err));
+        fatal_error(_(buffer), "?");
+    }
+
+    iconv_close(cd);
+    int numberChars = strlen(UTF8Input) - outleft;
+    outptr_orig[numberChars] = '\0';
+    return outptr_orig;
+}
+
+wchar_t* convertFromUTF8(const char* UTF8Text)
+{
+    if (isUTF8Locale)
+    {
+        return widen(UTF8Text);
+    }
+    else
+    {
+        char* textWithCurrentEncoding = convertUTF8ToCurrentEncoding(UTF8Text);
+        int numChars = strlen(textWithCurrentEncoding);
+        wchar_t* wrappedAs_wchar_t = (wchar_t*)malloc((numChars+1) * sizeof(wchar_t));
+        int i;
+        for (i = 0; i < numChars; i++)
+        {
+            wrappedAs_wchar_t[i] = (unsigned char)textWithCurrentEncoding[i];
+        }
+        wrappedAs_wchar_t[numChars] = L'\0';
+        free(textWithCurrentEncoding);
+        return wrappedAs_wchar_t;
+    }
+}
+
+void mvwideaddstr(int y, int x, const char* UTF8Text)
+{
+    move(y,x);
+    wideaddstr(UTF8Text);
+}
+
+void wideaddstr(const char* UTF8Text)
+{
+    if (isUTF8Locale)
+    {
+        addstr(UTF8Text);
+    }
+    else
+    {
+        char* textWithCurrentEncoding = convertUTF8ToCurrentEncoding(UTF8Text);
+        addstr(textWithCurrentEncoding);
+        free(textWithCurrentEncoding);
+    }
+}
+
+void wideaddstr_rev(const char* UTF8Text)
+{
+    attron(A_REVERSE);
+    wideaddstr(UTF8Text);
+    attroff(A_REVERSE);
+}
 
 void wideaddch(wchar_t c)
 {
@@ -36,14 +141,20 @@ void wideaddch(wchar_t c)
   wchar_t wc[2];
   int result;
 
+  if (!isUTF8Locale)
+  {
+      addch(c);
+      return;
+  }
+
   wc[0] = c;
   wc[1] = L'\0';
-
+  
   result = setcchar(&c2, wc, 0, 0, NULL);
   if (result != OK)
-    {
-      fatal_error(_("error in setcchar()"), "?");      
-    }
+  {
+      fatal_error(_("error in setcchar()"), "?");
+  }
   add_wch(&c2);
 }
 
@@ -54,19 +165,20 @@ void wideaddch_rev(wchar_t c)
   attroff(A_REVERSE);
 }
 
-int mbslen(const char* str)
+int utf8len(const char* UTF8Text)
 {
-  return mbstowcs(NULL, str, 0);
-}
-
-wchar_t* widen(const char* text)
-{
-  int numChars = mbslen(text);
-  wchar_t* wideText = malloc((numChars+1) * sizeof(wchar_t));
-  int convresult = mbstowcs(wideText, text, numChars+1);
-  if (convresult != numChars)
-    fatal_error(_("couldn't convert UTF-8 to wide characters"), "?");
-  return wideText;
+    /* the behavior of mbstowcs depends on LC_CTYPE! */
+    if (isUTF8Locale)
+    {
+        return mbstowcs(NULL, UTF8Text, 0);
+    }
+    else
+    {
+        char* textWithCurrentEncoding = convertUTF8ToCurrentEncoding(UTF8Text);
+        int len = strlen(textWithCurrentEncoding);
+        free(textWithCurrentEncoding);
+        return len;
+    }
 }
 
 /*
@@ -74,3 +186,4 @@ wchar_t* widen(const char* text)
   tab-width: 8
   End:
 */
+
