@@ -1,3 +1,8 @@
+2011-10-22 Felix Natter <fnatter@gmx.net>
+	* *.c, *.h: make gtypist run on non-utf8 locales with international lessons
+	* gtypist.c: add RETURN_CHARACTER (unicode symbol to designate newlines that
+	  must be typed)
+
 2011-10-14 Tim Marston <edam@waxworlds.org>
 
 	* gtypist.c, cursmenu.c, script.h: minor fixes to get gtypist to
